--- a/.github/workflows/audit-log.yml
+++ b/.github/workflows/audit-log.yml
@@ -12,4 +12,9 @@ jobs:
       - name: Check if PR was merged
         if: github.event.pull_request.merged == true
         run: |
-          echo "Pull Request #${{ github.event.pull_request.number }} was merged."
+          echo "Pull Request #${{ github.event.pull_request.number }} was merged."  >> audit.log
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Published Changes"
+          git push
