--- a/.github/workflows/audit-log.yml
+++ b/.github/workflows/audit-log.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Check if PR was merged
         if: github.event.pull_request.merged == true
         run: |
+          git config --global --add safe.directory $(realpath .
           echo "Pull Request #${{ github.event.pull_request.number }} was merged."  >> audit.log
           git config user.name github-actions
           git config user.email github-actions@github.com
